--- a/css/styles.css
+++ b/css/styles.css
@@ -523,6 +523,7 @@ body {
   transform: translate(-50%, -50%) scale(1);
   width: 408px;
   min-height: 584px;
+  padding: 72px 24px 24px 24px;
   background-color: var(--windowmodal-color);
   box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2),
     0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14);
@@ -606,99 +607,141 @@ body {
   border-radius: 2px;
 }
 
+.footer-form {
+  margin-left: 80px;
+}
 .subscribe-form {
   display: flex;
-  margin-left: 80px;
   gap: 24px;
-  justify-content: space-between;
-}
-
-.email-request {
-  display: flex;
-  flex-direction: column;
-  align-items: start;
-  gap: 16px;
 }
 .subscribe-label {
+  margin-bottom: 16px;
   color: var(--background-color);
   font-weight: 500;
   font-size: 16px;
-  line-height: 24px;
-  text-align: center;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--background-color);
 }
 .subscribe-button {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 16px;
-  padding: 8px 24px 8px 24px;
-  margin-top: 40px;
-  width: 165px;
+  min-width: 165px;
   height: 40px;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  cursor: pointer;
+  border: none;
+  border-radius: 4px;
   background-color: var(--normal-color);
   color: var(--background-color);
-  border-radius: 4px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .subscribe-button:hover,
 .subscribe-button:focus {
   background-color: var(--active-color);
 }
 
 .email-form {
-  padding: 8px;
+  gap: 24px;
+  padding-left: 16px;
   width: 246px;
   height: 40px;
   border: 1px solid var(--background-color);
+  color: var(--background-color);
   border-radius: 4px;
   font-size: 12px;
   font-weight: 400;
-  line-height: 24px;
-  background-color: var(--brand-color);
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  background-color: transparent;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 }
-::-webkit-input-placeholder {
-  color: var(--background-color);
-}
-:-moz-placeholder {
-  color: var(--background-color);
-}
-::-moz-placeholder {
-  color: var(--background-color);
-}
-:-ms-input-placeholder {
+::placeholder {
   color: var(--background-color);
 }
 
 .icon-subscribe {
+  margin-left: 16px;
   fill: var(--background-color);
 }
 .form-title {
-  padding: 72px 24px;
+  margin-bottom: 16px;
   font-weight: 500;
   font-size: 16px;
   line-height: 24px;
+  letter-spacing: 0.02em;
+  color: var(--brand-color);
   text-align: center;
 }
-
 .content-modal {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  gap: 26px;
+  margin-bottom: 8px;
 }
 
-.data-field {
-  position: relative;
+.label-modal {
+  display: block;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: var(--logo-color);
   margin-bottom: 4px;
 }
 
 .input-field {
-  width: 360px;
+  width: 100%;
   height: 40px;
   border-radius: 4px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  background-color: transparent;
+  padding-left: 38px;
+  outline: transparent;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.label-modal {
-  font-weight: 400;
+
+.input-field:focus-within {
+  border-color: var(--normal-color);
+}
+.modal-icon {
+  position: absolute;
+  left: 16px;
+  top: 50%;
+  transform: translateY(-50%);
+  fill: var(--brand-color);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-icon:hover,
+.modal-icon:focus-within {
+  fill: var(--normal-color);
+}
+.data-field {
+  position: relative;
+}
+.field-comment {
+  margin-bottom: 16px;
+}
+.field-text {
+  width: 100%;
+  height: 120px;
+  border-radius: 4px;
   font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  background-color: transparent;
+  padding: 8px 16px;
+  outline: transparent;
+  resize: none;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.field-text:hover,
+.field-text:focus-within {
+  border-color: var(--normal-color);
 }
