--- a/css/styles.css
+++ b/css/styles.css
@@ -650,7 +650,7 @@ body {
 .email-form {
   gap: 24px;
   padding-left: 16px;
-  width: 246px;
+  width: 264px;
   height: 40px;
   border: 1px solid var(--background-color);
   color: var(--background-color);
@@ -704,9 +704,6 @@ body {
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.input-field:focus-within {
-  border-color: var(--normal-color);
-}
 .modal-icon {
   position: absolute;
   left: 16px;
@@ -716,10 +713,15 @@ body {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-icon:hover,
-.modal-icon:focus-within {
+.input-field:hover,
+.input-field:focus-within {
+  border-color: var(--normal-color);
+}
+.input-field:hover + .modal-icon,
+.input-field:focus-within + .modal-icon {
   fill: var(--normal-color);
 }
+
 .data-field {
   position: relative;
 }
@@ -744,4 +746,28 @@ body {
 .field-text:hover,
 .field-text:focus-within {
   border-color: var(--normal-color);
+}
+.checkbox-field {
+  margin-bottom: 24px;
+}
+.terms-conditions {
+  display: block;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: var(--logo-color);
+}
+.accept-icon {
+  width: 16px;
+  height: 16px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 2px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  fill: transparent;
 }
