--- a/css/styles.css
+++ b/css/styles.css
@@ -771,3 +771,8 @@ body {
   justify-content: center;
   fill: transparent;
 }
+.modal-check:checked + .terms-conditions span {
+  background-color: var(--active-color);
+  fill: var(--background-color-second);
+  border: none;
+}
