--- a/css/styles.css
+++ b/css/styles.css
@@ -525,8 +525,8 @@ body {
   min-height: 584px;
   padding: 72px 24px 24px 24px;
   background-color: var(--windowmodal-color);
-  box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2),
-    0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14);
+  box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.14),
+    0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 2px 0px rgba(0, 0, 0, 0.2);
 
   border-radius: 4px;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -621,7 +621,6 @@ body {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: var(--background-color);
 }
 .subscribe-button {
   display: flex;
@@ -712,12 +711,10 @@ body {
   fill: var(--brand-color);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.input-field:hover,
 .input-field:focus-within {
   border-color: var(--normal-color);
 }
-.input-field:hover + .modal-icon,
+
 .input-field:focus-within + .modal-icon {
   fill: var(--normal-color);
 }
@@ -743,7 +740,7 @@ body {
   resize: none;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.field-text:hover,
+
 .field-text:focus-within {
   border-color: var(--normal-color);
 }
@@ -797,4 +794,9 @@ body {
   background-color: var(--normal-color);
   border-radius: 4px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.send-button:hover,
+.send-button:focus {
+  background-color: var(--active-color);
 }
